--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <style>
         .bg1 {
             background-color: #e0e0e0;
+            padding: 1rem;
         }
 
         .bg2 {
             background-color: #aeaeae;
+            padding: 1rem;
+        }
+        main {
+            padding: 16px;
         }
     </style>
 </head>
