--- a/index.html
+++ b/index.html
@@ -26,9 +26,20 @@
     <section>
         <h2>Equal Width Columns</h2>
         <div class="row">
-            <div class="col bg1"><span>.col</span></div>
+            <div class="bg1 col"><span>.col</span></div>
             <div class="col bg2"><span>.col</span></div>
             <div class="col bg1"><span>.col</span></div>
+        </div>
+        <hr>
+    </section>
+    <section>
+        <h2>Equal Width Columns <small>without .col class</small></h2>
+        <div class="row">
+            <div class="bg1"><span>No explicit .col</span></div>
+            <div class="bg2"><span>No explicit .col</span></div>
+            <div class="bg1"><span>No explicit .col</span></div>
+            <div class="bg2"><span>No explicit .col</span></div>
+            <div class="row bg1"><span>No explicit .col</span></div>
         </div>
         <hr>
     </section>
