--- a/example/index.html
+++ b/example/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>lump-grid</title>
-    <link rel="stylesheet" href="lump-grid.css">
+    <link rel="stylesheet" href="../lump-grid.css">
     <style>
         .bg1 {
             background-color: #e0e0e0;
@@ -14,6 +14,7 @@
             background-color: #aeaeae;
             padding: 1rem;
         }
+
         main {
             padding: 16px;
         }
@@ -25,33 +26,64 @@
     <hr>
     <section>
         <h2>Equal Width Columns</h2>
+        <p>Use the <code>.col</code> class to let each column have the same width.
+        </p>
         <div class="row">
-            <div class="bg1 col"><span>.col</span></div>
-            <div class="col bg2"><span>.col</span></div>
-            <div class="col bg1"><span>.col</span></div>
-        </div>
-        <hr>
-    </section>
-    <section>
-        <h2>Equal Width Columns <small>without .col class</small></h2>
-        <div class="row">
-            <div class="bg1"><span>No explicit .col</span></div>
-            <div class="bg2"><span>No explicit .col</span></div>
-            <div class="bg1"><span>No explicit .col</span></div>
-            <div class="bg2"><span>No explicit .col</span></div>
-            <div class="row bg1"><span>No explicit .col</span></div>
+            <div class="bg1 col">
+                <p>Gingerbread chupa chups cake carrot cake sweet. Pudding sweet
+                    brownie toffee marshmallow chocolate pudding danish. Chocolate
+                    cake marshmallow jelly beans. Apple pie croissant chocolate cake
+                    donut chocolate apple pie donut powder. Cheesecake bonbon toffee.
+                    Ice cream gummi bears caramels.</p>
+            </div>
+            <div class="col bg2">
+                <p>Oat cake pie chocolate cake jelly beans ice cream chocolate bar
+                    jelly gummies. Gummi bears biscuit pie powder ice cream pie
+                    pudding. Cake oat cake danish. Apple pie oat cake cookie powder
+                    gummies cheesecake cheesecake bear claw. Gingerbread candy canes
+                    cheesecake. Biscuit lollipop sugar plum candy liquorice.</p>
+            </div>
+            <div class="col bg1">
+                <p>Soufflé biscuit jelly. Dragée lollipop muffin. Dragée marshmallow
+                    lemon drops pie tiramisu marzipan brownie. Marshmallow toffee
+                    dragée croissant cupcake cookie toffee cupcake fruitcake.
+                    Caramels chocolate topping chocolate cookie jujubes. Topping
+                    chocolate apple pie cotton candy bonbon candy chupa chups muffin.
+                    Muffin marzipan brownie wafer chupa chups pastry bonbon tart.</p>
+            </div>
         </div>
         <hr>
     </section>
     <section>
         <h2>Auto Width Columns</h2>
+        <p>Use the <code>.col-auto</code> class to let each column have the width it
+            needs.</p>
         <div class="row">
-            <div class="col-auto bg1"><span>.col-auto</span></div>
-            <div class="col-auto bg2"><span>.col-auto</span></div>
-            <div class="col-auto bg1"><span>.col-auto</span></div>
-            <div class="col-auto bg2"><span>.col-auto</span></div>
-            <div class="col-auto bg1"><span>.col-auto</span></div>
-            <div class="col-auto bg2"><span>.col-auto</span></div>
+            <div class="col-auto bg1"><span>Chocolate cake soufflé icing jelly beans tootsie roll cheesecake.</span></div>
+            <div class="col-auto bg2"><span>Marzipan bear claw apple pie pudding</span></div>
+            <div class="col-auto bg1"><span>Cake chocolate bar chocolate wafer caramels chupa chups.</span></div>
+        </div>
+        <hr>
+    </section>
+    <section>
+        <h2>Auto Width Columns
+            <small>without .col class</small>
+        </h2>
+        <div class="row">
+            <div class="bg1"><span>No explicit .col</span></div>
+            <div class="bg2"><span>No explicit .col</span></div>
+            <div class="bg1"><span>No explicit .col</span></div>
+            <div class="bg2"><span>No explicit .col</span></div>
+            <div class="bg1"><span>No explicit .col</span></div>
+            <div class="bg2"><span>No explicit .col</span></div>
+            <div class="bg1"><span>No explicit .col</span></div>
+            <div class="bg2"><span>No explicit .col</span></div>
+            <div class="row">
+                <div class="bg1"><span>No explicit .col</span></div>
+                <div class="bg2"><span>No explicit .col</span></div>
+                <div class="bg1"><span>No explicit .col</span></div>
+                <div class="bg2"><span>No explicit .col</span></div>
+            </div>
         </div>
         <hr>
     </section>
